# gha_cmake_gcc_cpp17_sfml

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: check_build.yml
scripts/: build.sh  build_rackham.sh  install_dependencies.sh
